--- a/src/app/dashboard/twitch/chatbot/chatbot.component.html
+++ b/src/app/dashboard/twitch/chatbot/chatbot.component.html
@@ -1,6 +1,6 @@
 
 <!-- STOREABLE -->
-<nb-accordion *ngIf="listeners.settings" class="centered">
+<nb-accordion *ngIf="listeners.settings" class="centered alternate">
   <nb-accordion-item>
 
     <nb-accordion-item-header class="card-header">
@@ -63,7 +63,7 @@
 
 
 <!-- POKÉMON -->
-<nb-accordion *ngIf="listeners.settings" class="centered">
+<nb-accordion *ngIf="listeners.settings" class="centered alternate">
   <nb-accordion-item>
 
     <nb-accordion-item-header class="card-header">
@@ -92,7 +92,7 @@
 
 
 <!-- COMMON -->
-<nb-accordion *ngIf="listeners.settings" class="centered">
+<nb-accordion *ngIf="listeners.settings" class="centered alternate">
   <nb-accordion-item>
 
     <nb-accordion-item-header class="card-header">
@@ -121,7 +121,7 @@
 
 
 <!-- SELF -->
-<nb-accordion *ngIf="listeners.settings" class="centered">
+<nb-accordion *ngIf="listeners.settings" class="centered alternate">
   <nb-accordion-item>
 
     <nb-accordion-item-header class="card-header">
