--- a/src/app/browsersource/events/events.component.html
+++ b/src/app/browsersource/events/events.component.html
@@ -4,18 +4,13 @@
   padding: viewport.padding+'px'
 }">
   
-  <div *ngFor="let event of currentEvents">
-    <app-video *ngIf="event?.type === 'video'" [video]=event [viewport]="viewport"></app-video>
-    <app-audio *ngIf="event?.type === 'audio'" [audio]=event></app-audio>
-    <app-tts *ngIf="event?.type === 'tts'" [tts]=event></app-tts>
+  <div [@in]="event['transition IN']" [@out]="event['transition OUT']" *ngFor="let event of currentEvents">
+    <app-video *ngIf="event?.type === 'video'" [event]=event [viewport]="viewport"></app-video>
+    <app-audio *ngIf="event?.type === 'audio'" [event]=event></app-audio>
+    <app-tts *ngIf="event?.type === 'tts'" [event]=event></app-tts>
     <app-obs *ngIf="event?.type === 'obs'" [event]=event></app-obs>
     <app-chat *ngIf="event?.type === 'chat'" [event]=event></app-chat>
+    <app-gif *ngIf="event?.type === 'gif'" [event]=event [viewport]="viewport"></app-gif>
   </div>
-  
-  <div id="cover" [ngStyle]="{
-    left: viewport.width + 'px',
-    width: (1280 - viewport.width)+'px',
-    height: viewport.height+'px'
-  }"></div>
 
 </div>
