--- a/src/app/browsersource/events/video/video.component.html
+++ b/src/app/browsersource/events/video/video.component.html
@@ -6,14 +6,14 @@
     alignItems: alignItems ? alignItems : 'center',
     justifyContent: justifyContent ? justifyContent : 'center'
 }">
-    <video *ngIf="video" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" [ngStyle]="{
-        width: video.width ? video.width+'px' : 'fit-content',
-        height: video.height ? video.height+'px' : 'fit-content',
-        marginTop: video.marginTop ? video.marginTop+'px' : null,
-        marginRight: video.marginRight ? video.marginRight+'px' : null,
-        marginBottom: video.marginBottom ? video.marginBottom+'px' : null,
-        marginLeft: video.marginLeft ? video.marginLeft+'px' : null
+    <video *ngIf="event" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" [ngStyle]="{
+        width: event.width ? event.width+'px' : 'fit-content',
+        height: event.height ? event.height+'px' : 'fit-content',
+        marginTop: event.marginTop ? event.marginTop+'px' : null,
+        marginRight: event.marginRight ? event.marginRight+'px' : null,
+        marginBottom: event.marginBottom ? event.marginBottom+'px' : null,
+        marginLeft: event.marginLeft ? event.marginLeft+'px' : null
     }">
-        <source *ngIf="video.src" [src]="video.src">
+        <source *ngIf="event.src" [src]="event.src">
     </video>  
 </div>
