--- a/src/themes.scss
+++ b/src/themes.scss
@@ -78,6 +78,12 @@ $inner-element-color: #cbafff;
   background-color: $inner-element-background-light;
 }
 
+.supporter {
+  color: #916c3f;
+}
+.premium {
+  color: #daa520;
+}
 
 .composed-title {
   display: flex;
