--- a/src/app/browsersource/events/audio/audio.component.html
+++ b/src/app/browsersource/events/audio/audio.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <audio *ngIf="event" #audioPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()">
+    <audio *ngIf="event" #audioPlayer (loadeddata)="onLoadedData()" (error)="onError($event)" (ended)="onPlaybackEnded()">
         <source *ngIf="event.src" [src]="event.src">
     </audio>  
 </div>
