--- a/src/app/browsersource/events/video/video.component.html
+++ b/src/app/browsersource/events/video/video.component.html
@@ -6,7 +6,7 @@
     alignItems: alignItems ? alignItems : 'center',
     justifyContent: justifyContent ? justifyContent : 'center'
 }">
-    <video *ngIf="event" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" [ngStyle]="{
+    <video *ngIf="event" #videoPlayer (loadeddata)="onLoadedData()" (ended)="onPlaybackEnded()" (error)="onError($event)" [ngStyle]="{
         width: event.width ? event.width+'px' : 'fit-content',
         height: event.height ? event.height+'px' : 'fit-content',
         marginTop: event.marginTop ? event.marginTop+'px' : null,
