--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,7 +1,7 @@
 
 
 
-<nb-card>
+<nb-card class="centered">
 
     <nb-card-header>
       <img src="assets/brand/logo-white.png">
@@ -35,5 +35,3 @@
         </button>
     </div>
 </ng-template>
-  
-<div style="height:50vh;">&nbsp;</div>
