--- a/src/app/auth/token/token.component.html
+++ b/src/app/auth/token/token.component.html
@@ -1,9 +1,11 @@
 
-<nb-card size="small">
-  <nb-card-header>Login With Twitch</nb-card-header>
+<nb-card size="small" class="centered">
+  <nb-card-header>
+    <h1>
+      Login With Twitch
+    </h1>
+  </nb-card-header>
   <nb-card-body>
-    {{message}}
+      {{message}}
   </nb-card-body>
 </nb-card>
-
-<div style="height:70vh;">&nbsp;</div>
