--- a/src/app/dashboard/twitch/elements/elements.component.html
+++ b/src/app/dashboard/twitch/elements/elements.component.html
@@ -1,5 +1,5 @@
 <!-- nb-select does not work without these (the router blocks the styling) -->
-<nb-layout><nb-layout-column>
+<nb-layout class="nested"><nb-layout-column>
 
 
 <nb-card class="global-card centered">
